[package]
name = "fortran-ast-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jongsu Liam Kim <https://github.com/appleparan>"]
description = "A parser for Fortran, written in Rust."
license = "MIT"
readme = ".github/README.md"
repository = "https://github.com/appleparan/fortran.rs"
homepage = "https://xavier2p.github.io/fortran.rs"
documentation = "https://xavier2p.github.io/fortran.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-case = "3.1.0"
colored = "2.0.0"
clap = { version = "4.4.4", features = ["derive"] }
